Add scripts to generate JSON files to test Habit Application with 20, 50, 100, 250, and 1000 habits